--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,11 +3,24 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Game",
+            "request": "launch",
+            "mainClass": "Game",
+            "projectName": "Chess_AI_bbc684bc",
+                        "vmArgs": [
+                "--module-path",
+                "C:/Program Files/javafx-sdk-21.0.7/lib",
+                "--add-modules",
+                "javafx.controls,javafx.fxml"
+            ]
+        },
+        {
+            "type": "java",
             "name": "Board",
             "request": "launch",
             "mainClass": "Board",
             "projectName": "Chess_AI_bbc684bc",
-                        "vmArgs": [
+            "vmArgs": [
                 "--module-path",
                 "C:/Program Files/javafx-sdk-21.0.7/lib",
                 "--add-modules",
