--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,13 +3,26 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Game",
+            "request": "launch",
+            "mainClass": "Game",
+            "projectName": "Chess_b581e787",
+            "vmArgs": [
+                "--module-path",
+                "C:\\Program Files\\Java\\javafx-sdk-24.0.1\\lib",
+                "--add-modules",
+                "javafx.controls,javafx.fxml"
+            ]
+        },
+        {
+            "type": "java",
             "name": "Board",
             "request": "launch",
             "mainClass": "Board",
             "projectName": "Chess_AI_bbc684bc",
             "vmArgs": [
                 "--module-path",
-                "C:/Program Files/javafx-sdk-21.0.7/lib",
+                "C:\\Program Files\\Java\\javafx-sdk-24.0.1\\lib",
                 "--add-modules",
                 "javafx.controls,javafx.fxml"
             ]
@@ -22,7 +35,7 @@
             "projectName": "Chess_AI_bbc684bc",
             "vmArgs": [
                 "--module-path",
-                "C:/Program Files/javafx-sdk-21.0.7/lib",
+                "C:\\Program Files\\Java\\javafx-sdk-24.0.1\\lib",
                 "--add-modules",
                 "javafx.controls,javafx.fxml"
             ]
@@ -34,7 +47,7 @@
             "mainClass": "test",
             "vmArgs": [
                 "--module-path",
-                "C:/Program Files/javafx-sdk-21.0.7/lib",
+                "C:\\Program Files\\Java\\javafx-sdk-24.0.1\\lib",
                 "--add-modules",
                 "javafx.controls,javafx.fxml"
             ]
