--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,13 @@
 {
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "c:\\Program Files\\javafx-sdk-21.0.7\\lib\\javafx.base.jar",
-        "c:\\Program Files\\javafx-sdk-21.0.7\\lib\\javafx.controls.jar",
-        "c:\\Program Files\\javafx-sdk-21.0.7\\lib\\javafx.fxml.jar",
-        "c:\\Program Files\\javafx-sdk-21.0.7\\lib\\javafx.graphics.jar",
-        "c:\\Program Files\\javafx-sdk-21.0.7\\lib\\javafx.media.jar",
-        "c:\\Program Files\\javafx-sdk-21.0.7\\lib\\javafx.swing.jar",
-        "c:\\Program Files\\javafx-sdk-21.0.7\\lib\\javafx.web.jar",
-        "c:\\Program Files\\javafx-sdk-21.0.7\\lib\\javafx-swt.jar"
+        "C:\\Program Files\\Java\\javafx-sdk-24.0.1\\lib\\javafx.base.jar",
+        "C:\\Program Files\\Java\\javafx-sdk-24.0.1\\lib\\javafx.controls.jar",
+        "C:\\Program Files\\Java\\javafx-sdk-24.0.1\\lib\\javafx.fxml.jar",
+        "C:\\Program Files\\Java\\javafx-sdk-24.0.1\\lib\\javafx.graphics.jar",
+        "C:\\Program Files\\Java\\javafx-sdk-24.0.1\\lib\\javafx.media.jar",
+        "C:\\Program Files\\Java\\javafx-sdk-24.0.1\\lib\\javafx.swing.jar",
+        "C:\\Program Files\\Java\\javafx-sdk-24.0.1\\lib\\javafx.web.jar",
+        "C:\\Program Files\\Java\\javafx-sdk-24.0.1\\lib\\javafx-swt.jar"
     ]
 }
